[fix] spacing issue.

--- a/src/components/common/Avatar.sass
+++ b/src/components/common/Avatar.sass
@@ -1,5 +1,6 @@
 .avatar
   width: 50px
+  height: 50px
   object-fit: cover
   border-radius: 50%
   // margin-right: auto
